--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -1,10 +1,33 @@
 <html>
-  <head>
+<head>
+  <link rel="stylesheet" type="text/css" href="../lib/semantic-ui/css/semantic.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <script src="index.js"></script>
+</head>
 
-  </head>
+<body>
 
-  <body>
-      <h1>Hello!</h1>
-  </body
+    <div class="ui form segment">
+      <div class="field">
+        <label>Previous Model</label>
+        <div class="ui action input">
+          <input type="text" placeholder="Select a File..." disabled data-id="previousModelText">
+          <div class="ui icon button" data-id="previousModelButton">
+            <i class="text file icon"></i>
+          </div>
+        </div>
+      </div>
+      <div class="field">
+        <label>Current Model</label>
+        <div class="ui action input">
+          <input type="text" placeholder="Select a File..." disabled data-id="currentModelText">
+          <div class="ui icon button" data-id="currentModelButton">
+            <i class="text file icon"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+
+</body>
 
 </html>
