Set up accordion and initial structure for field type diff UI.

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -26,6 +26,22 @@
         Perform Diff
       </div>
     </div>
+    <div class="ui accordion">
+      <div class="active title">
+        <i class="dropdown icon"></i>
+        ItemName
+      </div>
+      <div class="active content">
+        THINGS!
+      </div>
+      <div class="title">
+        <i class="dropdown icon"></i>
+        ItemSubtitle
+      </div>
+      <div class="content">
+        OTHER THINGS!
+      </div>
+    </div>
     <pre class="ui message">
       {{diffResults}}
     </pre>
