Add debug support to gulpfile. Start diff parsing for UI.

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -32,14 +32,10 @@
         ItemName
       </div>
       <div class="active content">
-        THINGS!
-      </div>
-      <div class="title">
-        <i class="dropdown icon"></i>
-        ItemSubtitle
-      </div>
-      <div class="content">
-        OTHER THINGS!
+        <div class="">
+
+
+        </div>
       </div>
     </div>
     <pre class="ui message">
