Fixed comparison bug: previously checked for identify instead of equality. Added CVL Id field to show if CVLs are different.

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -48,6 +48,12 @@
               current-value="field.current.DataType">
             </diff-row>
             <diff-row
+              field-name="CVL Id"
+              status="field.changed"
+              previous-value="field.previous.CVLId"
+              current-value="field.current.CVLId">
+            </diff-row>
+            <diff-row
               field-name="Category Id"
               status="field.changed"
               previous-value="field.previous.CategoryId"
